--- a/huracan-react/src/styles/global/utilities.css
+++ b/huracan-react/src/styles/global/utilities.css
@@ -21,3 +21,13 @@
     padding: 16px 0; /* Más alto para que sea más fácil de presionar */
   }
 }
+
+/* Text Utilities */
+.text-center { text-align: center; }
+.text-left { text-align: left; }
+.text-right { text-align: right; }
+.text-justify { text-align: justify; }
+
+/* Font Weights */
+.fw-bold { font-weight: 700; }
+.fw-black { font-weight: 900; }
